--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,12 @@
             "styles": [
               "src/styles/main.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
+
             "scripts": []
           },
           "configurations": {
@@ -94,6 +100,12 @@
             "styles": [
               "src/styles/main.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/styles"
+              ]
+            },
+
             "scripts": []
           }
         },
