--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/main.scss"
+              "src/styles/main.scss",
+              "src/icons//icofont/icofont.min.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
@@ -98,7 +99,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles/main.scss"
+              "src/styles/main.scss",
+              "src/icons/icofont/icofont.min.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
